# giotto-ph

benchmarking/: CMakeLists.txt  ripser.cpp
examples/: basic_tutorial.ipynb
gph/python/: ripser_interface.py
gph/src/: ripser.h
gph/test/: test_ripser.py
paper/: paper.bib  paper.md
